# XLSXReader

./: .gitignore  CMakeLists.txt  README.md
include/: bank.h  bankFactory.h
include/banks/: biceBank.h  santanderBank.h
src/: bank.cpp  bankFactory.cpp  main.cpp
src/banks/: biceBank.cpp  santanderBank.cpp
